--- a/scss/blocks/_download-button.scss
+++ b/scss/blocks/_download-button.scss
@@ -1,4 +1,4 @@
-.download-button {
+body .download-button {
   padding: 20px 25px;
   background-color: $accent;
   color: #fff;
@@ -7,11 +7,14 @@
   letter-spacing: normal;
   border-radius: 20px;
     &:hover {
-      background-color: pink;
+      background: linear-gradient(180deg, #F258B7 0%, #D51C8C 100%);
+      color: #fff;
     }
     &:active,
     &:focus {
+     
       outline: none;
+      // color: #fff;
     }
 }
 
