--- a/scss/blocks/_text-block.scss
+++ b/scss/blocks/_text-block.scss
@@ -123,6 +123,9 @@
     & li {
       margin-bottom: 15px;
     }
+    & i {
+      word-wrap: break-word;
+    }
   }
   
 }
@@ -132,7 +135,7 @@
   padding: 0;
   margin-bottom: 10px;
   text-transform: uppercase;
-  font-size: 26px;
+  font-size: 25px;
   line-height: 120%;
   font-weight: 500;
   color: $accent;
@@ -140,7 +143,7 @@
 
 .text-block__subtitle {
   display: block;
-  font-size: 26px;
+  font-size: 23px;
   line-height: 120%;
   font-weight: 300;
   margin-bottom: 20px;
