--- a/scss/blocks/_download-button.scss
+++ b/scss/blocks/_download-button.scss
@@ -1,6 +1,6 @@
 body .wrapper .text-block__content .download-button {
   padding: 20px 25px;
-  background-color: $accent;
+  background: linear-gradient(180deg, $accent 0%, $accent 100%);
   color: #fff;
   font-size: 22px;
   font-weight: 500;
@@ -12,8 +12,7 @@ body .wrapper .text-block__content .download-button {
     }
     
     &:active {
-      background: none;
-      background-color: #B80070;
+      background: linear-gradient(180deg, #B80070 0%, #B80070 100%);
     }
 }
 
