--- a/scss/blocks/_main.scss
+++ b/scss/blocks/_main.scss
@@ -3,12 +3,12 @@
 }
 
 .main-wrapper {
-  max-width: 1280px;
+  // max-width: 1280px;
   margin: 0 auto;
 }
 
 .main-header {
-  max-width: 1920px;
+  // max-width: 1920px;
   margin: 0 auto;
   margin-bottom: 30px;
   & img {
