--- a/scss/blocks/_text-block.scss
+++ b/scss/blocks/_text-block.scss
@@ -197,7 +197,8 @@ main .text-block__content {
         width: 50px;
         height: 50px;
         border-radius: 15px;
-        background-color: $accent;
+        // background-color: $accent;
+        background: linear-gradient(180deg, #EF53B3 0%, #D72090 100%);
       }
       &:last-child {
         margin-bottom: 0;
@@ -296,7 +297,8 @@ main .text-block__content {
       background-size: 100% 100%;
     }
     &--5 {
-      margin-bottom: 60px;
+      // margin-bottom: 60px;
+      
       & .text-block__container {
         padding: 25px 0;
         font-size: 21px;
@@ -310,10 +312,11 @@ main .text-block__content {
       }
     }
     &--6 {
+      margin-top: -100px;
       // padding: 50vh 0;
       padding-top: calc(100vw / 6.6);
       padding-bottom: calc(100vw / 6.6);
-      margin-bottom: 45px;
+      // margin-bottom: 45px;
       background-color: #fff;
       background-image: url('../img/blue-bg-2.png');
       background-repeat: no-repeat;
@@ -325,6 +328,7 @@ main .text-block__content {
         }
     }
     &--7 {
+      margin-top: -50px;
       margin-bottom: 50px; 
     }
     &--8 {
