scroll button, color blocks

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -9,4 +9,7 @@
 @import "blocks/main";
 @import "blocks/download-button";
 @import "blocks/card";
+@import "blocks/bg-image";
+@import "blocks/outline";
+@import "blocks/nav-button";
 
