--- a/scss/blocks/_text-block.scss
+++ b/scss/blocks/_text-block.scss
@@ -69,6 +69,7 @@
     padding: 60px 0;
     background-color:#60D0FF;
     color: #fff;
+    font-weight: 400;
   }
   &--5 {
     & .text-block__container {
@@ -88,6 +89,9 @@
       }
       & .button {
         margin-top: 20px;
+      }
+      & p {
+        font-weight: 400;
       }
   }
   &--7 {
@@ -125,6 +129,9 @@
     }
     & i {
       word-wrap: break-word;
+    }
+    & .wrapper {
+      border-bottom: 1px solid #282828;
     }
   }
   
@@ -197,7 +204,6 @@ main .text-block__content {
         width: 50px;
         height: 50px;
         border-radius: 15px;
-        // background-color: $accent;
         background: linear-gradient(180deg, #EF53B3 0%, #D72090 100%);
       }
       &:last-child {
@@ -221,6 +227,12 @@ main .text-block__content {
           height: 40px;
         }
       }
+    }
+    &--6 {
+      padding: 90px 0;
+      background-color: #fff;
+      background-image: url('../img/blue-bg-only.png');
+      background-size: 100% 100%;
     }
   }
 
@@ -288,7 +300,7 @@ main .text-block__content {
       }
     }
     &--4 {
-      padding: 10vh 0;
+      padding: 12vh 0;
       margin-bottom: 50px;
       background-color: #fff;
       background-image: url('../img/blue-bg.png');
@@ -297,8 +309,6 @@ main .text-block__content {
       background-size: 100% 100%;
     }
     &--5 {
-      // margin-bottom: 60px;
-      
       & .text-block__container {
         padding: 25px 0;
         font-size: 21px;
@@ -312,15 +322,9 @@ main .text-block__content {
       }
     }
     &--6 {
-      margin-top: -100px;
-      // padding: 50vh 0;
-      padding-top: calc(100vw / 6.6);
-      padding-bottom: calc(100vw / 6.6);
-      // margin-bottom: 45px;
+      position: relative;
       background-color: #fff;
-      background-image: url('../img/blue-bg-2.png');
       background-repeat: no-repeat;
-      background-position: center;
       background-size: 100% 100%;
         & .text-block__title {
           margin-top: 10px;
@@ -328,7 +332,6 @@ main .text-block__content {
         }
     }
     &--7 {
-      margin-top: -50px;
       margin-bottom: 50px; 
     }
     &--8 {
@@ -340,6 +343,12 @@ main .text-block__content {
       }
       & .text-block__image {
         margin: 10px 0;
+      }
+    }
+
+    .text-block__wide {
+      &--2 {
+        margin-bottom: 130px;
       }
     }
   }
